kubernetes/argocd/apps/workloads/alexispaul/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alexispaul
  namespace: alexispaul
  labels:
    app: alexispaul
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: alexispaul
  template:
    metadata:
      labels:
        app: alexispaul
    spec:
      containers:
        - name: alexispaul
          image: ghcr.io/paulkiernan/alexispaul:0.12.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
        - name: dockerconfigjson-github-com
