kubernetes/argocd/apps/workloads/alexispaul/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alexispaul
  namespace: alexispaul
spec:
  selector:
    app: alexispaul
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
